examples/test/testpolicy11350.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11350
  namespace: namespace427
spec:
  podSelector:
    matchLabels:
      key44: value11
      key49: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value30
      podSelector:
        matchLabels:
          key32: value9
          key0: value28
